--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <h1>Политика конфиденциальности</h1>
   
-  <p>Приложение "Таймер боксерский" создано для тренировок и спорта. Мы не собираем и не обрабатываем никаких персональных данных пользователей. Вся работа приложения происходит локально на устройстве.</p>
+  <p>Приложение "TIGAVA TIMER" создано для тренировок и спорта. Мы не собираем и не обрабатываем никаких персональных данных пользователей. Вся работа приложения происходит локально на устройстве.</p>
   
   <h2>Сбор и использование данных</h2>
   <p>Мы не осуществляем сбор, хранение или передачу информации о пользователях. Приложение работает автономно и не подключается к удалённым серверам для обмена данными.</p>
@@ -35,7 +35,7 @@
   <p>Мы оставляем за собой право обновлять данную политику конфиденциальности. Любые изменения будут опубликованы на этой странице.</p>
   
   <h2>Контактная информация</h2>
-  <p>Если у тебя, Джоннис, возникнут вопросы или предложения по данной политике, пожалуйста, свяжись с разработчиком через указанные каналы.</p>
+  <p>Если у вас возникнут вопросы или предложения по данной политике, пожалуйста, свяжись с разработчиком через указанные каналы.</p>
   
   <p><em>Дата последнего обновления: 10.02.2025</em></p>
 </body>
