--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <p>Мы оставляем за собой право обновлять данную политику конфиденциальности в случае изменения функционала приложения или законодательства. Все изменения будут опубликованы на этой странице, а при значительных обновлениях мы уведомим пользователей дополнительно.</p>
     
     <p><em>Дата последнего обновления: 07.03.2025</em></p>
+    <p>Контакты: <a href="mailto:jnx5888@yandex.com">jnx5888@yandex.com</a></p>
   </div>
 
   <hr>
@@ -84,6 +85,7 @@
     <p>We reserve the right to update this Privacy Policy if the app’s functionality or legal requirements change. Any updates will be posted on this page, and significant changes will be communicated to users through additional notifications.</p>
     
     <p><em>Last Updated: March 07, 2025</em></p>
+    <p>Contact: <a href="mailto:jnx5888@yandex.com">jnx5888@yandex.com</a></p>
   </div>
 </body>
 </html>
